# stakml

./: .gitignore  CMakeLists.txt  cleanup.sh
examples/: full_tournament.cpp  group_stage.cpp  mnist_mlp.cpp  predict_match.cpp  world_cup.cpp
include/stakml/: conv.hpp  dataset.hpp  tensor.hpp
src/: tensor.cpp
tests/: stress_test.cpp  test_backward.cpp  test_loss.cpp  test_optim.cpp  test_tensor.cpp
